Fix spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -177,6 +177,7 @@
         font-style: italic;
         line-height: 38.4px;
         margin: 0;
+        margin-bottom: 10px;
     }
 
     hr {
